--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.0.*",
+        "symfony/config": "5.0.*",
         "symfony/console": "5.0.*",
+        "symfony/dependency-injection": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/expression-language": "5.0.*",
         "symfony/flex": "^1.3.1",
@@ -19,6 +21,8 @@
         "symfony/monolog-bundle": "^3.1",
         "symfony/notifier": "5.0.*",
         "symfony/orm-pack": "*",
+        "symfony/polyfill-ctype": "^1.14",
+        "symfony/polyfill-mbstring": "^1.14",
         "symfony/process": "5.0.*",
         "symfony/security-bundle": "5.0.*",
         "symfony/serializer-pack": "*",
